objects/Case.object
<CustomObject><businessProcesses>
        <fullName>Account Service</fullName>
        <description>Used by non-technical case record types.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Attention</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Warning</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Technical Service</fullName>
        <description>Used by the "Technical Service" Case record type.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Attention</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Warning</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>CSAT__c</fullName>
        <description>Added specifically for use by the Service Wave Analytics dashboard.</description>
        <label>CSAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Case_Survey_URL__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_320, FIND( "/services", $Api.Enterprise_Server_URL_320) -1) + '/apex/DE_CustomerSurvey'</formula>
        <label>Case Survey URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Channel__c</fullName>
        <formula>IMAGE( URLsrc__c&amp;"/servlet/servlet.ImageServer?id="&amp;CASE( Origin, 
"Phone", "01541000001QwvT&amp;oid="&amp;$Organization.Id, 
"Email", "01541000001QwvU&amp;oid="&amp;$Organization.Id, 
"Chat", "01541000001QwvV&amp;oid="&amp;$Organization.Id, 
"Website", "01541000001QwvW&amp;oid="&amp;$Organization.Id, 
"Community", "01541000001QwvX&amp;oid="&amp;$Organization.Id, 
"Mobile Device", "01541000001QwvY&amp;oid="&amp;$Organization.Id, 
"Q&amp;A", "01541000001QwvX&amp;oid="&amp;$Organization.Id, 
"Facebook", "01541000001QwvZ&amp;oid="&amp;$Organization.Id, 
"Twitter", "01541000001Qwva&amp;oid="&amp;$Organization.Id, 
"Google", "01541000001Qwvb&amp;oid="&amp;$Organization.Id, 
"Sina Weibo", "01541000001Qwvc&amp;oid="&amp;$Organization.Id, 
"Portal", "01541000001QwvX&amp;oid="&amp;$Organization.Id, 
"Instagram", "01541000001Qwvd&amp;oid="&amp;$Organization.Id, 
"LinkedIn", "01541000001Qwve&amp;oid="&amp;$Organization.Id, 
"Text Session", "01541000001Qwvf&amp;oid="&amp;$Organization.Id, 

"01541000001QwvT&amp;oid="&amp;$Organization.Id),"",22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Community_Contact_Match__c</fullName>
        <formula>ContactId = $User.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Contact Match</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Cost__c</fullName>
        <formula>Case ( Origin, 'Phone', 3.5, 'Chat', 2, 'Email', 2, 'Website', 1.5, 'Portal', 1.5, 'Chatter Answer', 1.2, 1.75)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small and Medium Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Customer_emoticon__c</fullName>
        <formula>IF(   (TEXT( Customer_emoticon_value__c ) =="")  ,"" ,IMAGE( "resource/pkb_mobile/imgs/"+TEXT( Customer_emoticon_value__c ) +".png" ,TEXT( Customer_emoticon_value__c )  ,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How the customer was feeling when he enter the support case.</inlineHelpText>
        <label>Customer emoticon</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Customer_emoticon_value__c</fullName>
        <description>Store the emoticon as a text value.</description>
        <label>Customer emoticon value</label>
        <picklist>
            <picklistValues>
                <fullName>happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>confused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>annoyed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>frustrated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>DB_Case_Duration_Hours__c</fullName>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>DB Case Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>DB_Hours__c</fullName>
        <description>This is used for the "Perfect Data" SE tool</description>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>DB Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>DateTime_Closed_c__c</fullName>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>DateTime Closed</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>DateTime_Opened_c__c</fullName>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>DateTime Opened</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Duration__c</fullName>
        <formula>8*(IF( ISNULL( DateTime_Closed_c__c  ), NOW() -  DateTime_Opened_c__c ,  DateTime_Closed_c__c  -  DateTime_Opened_c__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Escalation_URL__c</fullName>
        <description>Part of the Escalation URL package. Alena Abrosimova</description>
        <label>Escalation URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>First_Contact_Close__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to mark cases that are closed on first contact, without requiring additional engagement with the customer.  Off by default.  Driven by workflow rule.</description>
        <label>First Contact Close</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>KB_Article_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when there is a KB Article attached to the Case.</description>
        <inlineHelpText>Checked when there is a KB Article attached to the Case.</inlineHelpText>
        <label>KB Article Attached</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Org_Cust_Case_ID__c</fullName>
        <label>Org Cust Case ID</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Pick_Up__c</fullName>
        <description>Part of the Escalation URL package. Alena Abrosimova</description>
        <formula>IF (Escalation_URL__c ="", "", 
IF (Escalation_URL__c &lt;&gt; "", HYPERLINK(Escalation_URL__c, IMAGE("/resource/context", ""), "_parent"), "_parent"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pick Up</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procedure</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Product_Family_KB__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Conferencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headphones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Theatre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotspot Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projectors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Quality_Score__c</fullName>
        <description>This field is used by the "Quality Score by Agent" component on the Service Executive Dashboard.  It indicates the "quality"--typically a post-call assessment by supervisor or quality-control personnel--that has been awarded to a case.  This is a number field, manually updated, but it could be accessed by a quality control system.</description>
        <label>Quality Score</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>RC_Keywords__c</fullName>
        <description>Keyword list used by the Relevant Content package. It is recommended that this field is NOT added to the page layout. To add fields containing keywords, edit this formula field to include additional fields separated by spaces.</description>
        <formula>TEXT(Reason) + " " +  Subject + " " +  Account.Name + " " +  TEXT(Account.Industry)</formula>
        <inlineHelpText>Relevant keywords for this record</inlineHelpText>
        <label>RC_Keywords</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Response_Time_mins__c</fullName>
        <label>Response Time (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>SLA_Compliant__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used by the "SLA Compliance" dashboard on the Service Executive dashboard.  It is checked by default, and unchecked when a case misses a milestone.</description>
        <label>SLA Compliant</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>SLA_Type__c</fullName>
        <description>Created for use by Service Wave to segment cases by SLA.  Entitlements field now accessible to Wave.</description>
        <label>SLA Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Send_Email_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Trigger</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IMAGE(URLsrc__c&amp;"/servlet/servlet.ImageServer?id="&amp;CASE( Status, 
"New", "01541000001Qwue&amp;oid=00D41000001MYfZ", 
"Working","01541000001Qwuf&amp;oid=00D41000001MYfZ",
"Waiting on customer", "01541000001Qwug&amp;oid=00D41000001MYfZ",
"Response Received","01541000001Qwuh&amp;oid=00D41000001MYfZ",
"Escalated", "01541000001Qwui&amp;oid=00D41000001MYfZ", 
"Warning","01541000001Qwuj&amp;oid=00D41000001MYfZ",
"Violation","01541000001Qwuk&amp;oid=00D41000001MYfZ",
"Closed in Portal", "01541000001Qwul&amp;oid=00D41000001MYfZ",
"Closed","01541000001Qwul&amp;oid=00D41000001MYfZ",
"Closed - First Call", "01541000001Qwul&amp;oid=00D41000001MYfZ",
"Submitting Feature","01541000001Qwui&amp;oid=00D41000001MYfZ",
"01541000001Qwue&amp;oid=00D41000001MYfZ"),"Status",24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Setup and Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order or Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Type_of_Support__c</fullName>
        <label>Type of Support</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>UMCustomer_emoticon__c</fullName>
        <formula>IF( (TEXT( UMCustomer_emoticon_value__c ) =="") ,"" ,IMAGE( "resource/um_branding/assets/"+TEXT( UMCustomer_emoticon_value__c ) +".png" ,TEXT( UMCustomer_emoticon_value__c ) ,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer emoticon</label>
        <type>Text</type>
    </fields><fields>
        <fullName>UMCustomer_emoticon_value__c</fullName>
        <description>Store the emoticon as a text value.</description>
        <label>Customer emoticon value</label>
        <picklist>
            <picklistValues>
                <fullName>awesome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>UMgeolocalization__c</fullName>
        <description>Store the geolocalization of the customer on case creation from mobile.</description>
        <inlineHelpText>Where the customer was when the case has been created</inlineHelpText>
        <label>Customer Geolocalization</label>
        <scale>2</scale>
        <type>Location</type>
    </fields><fields>
        <fullName>URLsrc__c</fullName>
        <description>This field is to ensure that icons show up properly in Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,".force.com"), 
MID( $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0)), 
FIND("/", $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0))+1) - FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0)) 
) , "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Urgency__c</fullName>
        <formula>IMAGE( URLsrc__c&amp;"/servlet/servlet.ImageServer?id="&amp;CASE( Priority, 
"Critical", "01541000001Qwv7&amp;oid="&amp;$Organization.Id, 
"High", "01541000001Qwv8&amp;oid="&amp;$Organization.Id, 
"Medium", "01541000001Qwv9&amp;oid="&amp;$Organization.Id, 
"Low", "01541000001QwvA&amp;oid="&amp;$Organization.Id, 
"01541000001QwvA&amp;oid="&amp;$Organization.Id),"",22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Volume__c</fullName>
        <description>This field is used by the "Channel History" dashboard on the Service Executive dashboard.  It's a hidden field on the case that represents the number of cases for that time period.  This is because there are not enough cases in the SDO to make a compelling historical dashboard.  It is manually updated, and tied to no workflow rules.</description>
        <label>Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>pkbgeolocalization__c</fullName>
        <description>Store the geolocalization of the customer on case creation from mobile.</description>
        <inlineHelpText>Where the customer was when the case has been created</inlineHelpText>
        <label>Customer Geolocalization</label>
        <scale>2</scale>
        <type>Location</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><externalSharingModel>Private</externalSharingModel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>Channel__c</columns>
        <columns>Status_Indicator__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
        <language>en_US</language>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Status_Indicator__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Billing_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Sub_Type__c</columns>
        <columns>Status_Indicator__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Type__c</field>
            <operation>equals</operation>
            <value>Billing</value>
        </filters>
        <label>Billing Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>SupportAgents</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Tier_2_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Pick_Up__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Procedure Issue</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Working</value>
        </filters>
        <label>Procedure Issues</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><recordTypes>
        <fullName>Chat_Case</fullName>
        <active>true</active>
        <businessProcess>Account Service</businessProcess>
        <description>Used for cases that originate from the Chat channel.</description>
        <label>Chat Case</label>
    </recordTypes><recordTypes>
        <fullName>SimpleIssue</fullName>
        <active>true</active>
        <businessProcess>Account Service</businessProcess>
        <description>For questions regarding a customer's account information - billing, invoices, etc.</description>
        <label>Account Service</label>
    </recordTypes><recordTypes>
        <fullName>Social_Customer_Service</fullName>
        <active>true</active>
        <businessProcess>Account Service</businessProcess>
        <description>For questions that originate from social channels Facebook or Twitter.</description>
        <label>Social Customer Service</label>
    </recordTypes><recordTypes>
        <fullName>TechnicalIssueAdvanced</fullName>
        <active>true</active>
        <businessProcess>Technical Service</businessProcess>
        <description>For questions about product capabilities or troubleshooting technical issues.</description>
        <label>Technical Service</label>
    </recordTypes></CustomObject>